src/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  rules:
  - http:
      paths:
      - path: /api/orch
        backend:
          serviceName: orchestrator-service
          servicePort: 80
      - path: /
        backend:
          serviceName: nginx-stream-service
          servicePort: 80
